<resources>
    <string name="app_name">DogPlay</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="registration_complete">New user data added</string>

    <string name="change_account">CHANGE ACCOUNT SETTINGS?</string>
    <string name="update_profile">UPDATE USER PROFILE?</string>
    <string name="dog_description">DOG DESCRIPTION</string>
    <string name="find_playground">FIND ME A DOGGY PLAYGROUND</string>

    <string name="user_data">USER PROFILE PAGE</string>
    <string name="user_name">type your username here</string>
    <string name="dog_name">type your dogs name here</string>
    <string name="dog_size">Mark your dogs size</string>
    <string name="small">Small size</string>
    <string name="medium">Medium size</string>
    <string name="big">Big size</string>
    <string name="attributes">Mark your dogs attributes</string>
    <string name="friendly">Friendly</string>
    <string name="playful">Playful</string>
    <string name="gWithPeople">Good With People</string>
    <string name="save">Save Data!</string>

    <string name="GPS_toggle">Toggle GPS tracking</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
