<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".user.FirstUserProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="25dp"
            android:text="@string/user_data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/upload_image_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:textSize="12dp"
                android:textColor="@color/colorAccent"
                android:background="@null"
                android:text="upload profile picture" />

            <ImageView
                android:id="@+id/user_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:src="@mipmap/dog_play_icon" />

            <Button
                android:id="@+id/save_image_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="14dp"
                android:textSize="12dp"
                android:textColor="@color/colorAccent"
                android:background="@null"
                android:text="save uploaded image" />

        </LinearLayout>


        <EditText
            android:id="@+id/uName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/user_name"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/dName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/dog_name"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp">

            <RadioGroup
                android:id="@+id/size"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_horizontal"
                android:checkedButton="@+id/medium">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:text="@string/dog_size" />

                <RadioButton
                    android:id="@+id/small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/small" />

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/big" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dogInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/attributes" />

                <CheckBox
                    android:id="@+id/isFriendly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friendly" />

                <CheckBox
                    android:id="@+id/isPlayful"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playful" />

                <CheckBox
                    android:id="@+id/isGoodWithPeople"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gWithPeople" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/filledUserData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="50dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>