<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dogname"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="25sp" />
        </LinearLayout>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:text="@string/dog_description"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/dogInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="85dip"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/findPlayground"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:text="@string/find_playground"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"/>


        <Button
            android:id="@+id/update_user_data"
            android:layout_width="fill_parent"
            android:layout_height="34dp"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="@string/update_profile"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <Button
            android:id="@+id/update_account_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:text="@string/change_account"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>